Revert "Rrights and changes"
This reverts commit 7bbed0e95493ddf50b2e46914d6bda9b93874dae.

--- a/package.json
+++ b/package.json
@@ -18,11 +18,7 @@
     "cast",
     "convert"
   ],
-  "author": {
-    "name": "Jean Puga",
-    "email": "jean.m.puga@gmail.com",
-    "homepage": "http://www.zixtools.com.br"
-  },
+  "author": "Jean Puga",
   "coauthor": "Kaio Silveira",
   "license": "MIT",
   "bugs": {
