--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "retypejs",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Middle to parse through model strings for types.",
   "readmeFilename": "README.md" ,
   "scripts": {
@@ -14,17 +14,26 @@
     "parse",
     "parseInt",
     "parseFloat",
+    "parseDateTime",
+    "DateTime",
     "type",
     "cast",
-    "convert"
+    "convert",
+    "remove-json",
+    "remove-json-tuple"
+    
   ],
   "tags": [
     "parse",
     "parseInt",
     "parseFloat",
+    "parseDateTime",
+    "DateTime",
     "type",
     "cast",
-    "convert"
+    "convert",
+    "remove-json",
+    "remove-json-tuple"
   ],
   "author": {
     "name": "Jean Puga",
