Change packages - add Jest for linux

--- a/example/package.json
+++ b/example/package.json
@@ -10,8 +10,8 @@
     "example"
   ],
   "author": "Jean Puga",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "retypejs": "0.0.3"
+    "retypejs": "^0.0.3"
   }
 }
