--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "retypejs",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Middle to parse through model strings for types.",
   "readmeFilename": "README.md",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -46,10 +47,14 @@
   },
   "homepage": "https://github.com/jeanpuga/retypejs#readme",
   "devDependencies": {
-    "jest": "^24.7.1"
+    "jest": "^24.7.1",
+    "jest-cli": "^24.8.0"
   },
   "jest": {
     "verbose": true
   },
-  "main": "index.js"
+  "main": "index.js",
+  "dependencies": {
+    "jest-haste-map": "^24.8.0"
+  }
 }
