--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "retypejs",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "Middle to parse through model strings for types.",
   "readmeFilename": "README.md",
+  "publishConfig": { "registry": "https://github.com/jeanpuga/retypejs.git" },
   "scripts": {
     "test": "jest",
     "test:coverage": "jest --coverage"
